LFHCDESK-44: Roles/Responsibilities - ability to restrict
Adding support to the formPrivilege attribute in metadata configuration
	modified:   api/src/main/java/org/openmrs/module/lfhcforms/utils/ExtensionFormUtil.java

Adding the "formPrivilege" attribute to the forms metadata

	modified:   api/src/main/java/org/openmrs/module/lfhcforms/utils/ExtensionFormUtil.java
	modified:   omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
	modified:   omod/src/main/webapp/resources/htmlforms/diagnosis.html
	modified:   omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
	modified:   omod/src/main/webapp/resources/htmlforms/discharge.html
	modified:   omod/src/main/webapp/resources/htmlforms/dispense-med.html
	modified:   omod/src/main/webapp/resources/htmlforms/fluidbalance.html
	modified:   omod/src/main/webapp/resources/htmlforms/history.html
	modified:   omod/src/main/webapp/resources/htmlforms/immunity.html
	modified:   omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
	modified:   omod/src/main/webapp/resources/htmlforms/lines-tubes.html
	modified:   omod/src/main/webapp/resources/htmlforms/med-order.html
	modified:   omod/src/main/webapp/resources/htmlforms/nvobs.html
	modified:   omod/src/main/webapp/resources/htmlforms/opd-nurse.html
	modified:   omod/src/main/webapp/resources/htmlforms/phys-exam.html
	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
	modified:   omod/src/main/webapp/resources/htmlforms/triage.html
	modified:   omod/src/main/webapp/resources/htmlforms/vitals-pews.html
	modified:   omod/src/main/webapp/resources/htmlforms/wound.html

--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.5"
+<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.5.1"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="11"
 formIcon="icon-stethoscope"
 formShowIf=""
+formPrivilege="Task: lfhcforms.diagnosis"
 formDisplayStyle="Simple"
 >
 
