--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="1c6c9d87-748b-43c4-b764-3df7e711762f" formName="Fluid Balance" formEncounterType="9f5c90b2-03e0-4374-8534-6c32ea71f3ab" formVersion="0.5.1"
+<htmlform formUuid="1c6c9d87-748b-43c4-b764-3df7e711762f" formName="Fluid Balance" formEncounterType="9f5c90b2-03e0-4374-8534-6c32ea71f3ab" formVersion="0.5.2"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="14"
 	formIcon="icon-medkit"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.fluid-balance"
 	formDisplayStyle="Simple"
 	>
 
