--- a/omod/src/main/webapp/resources/htmlforms/med-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/med-order.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="f1ebd934-e291-430d-956c-cd7eea7af5c1" formName="Medication Order" formEncounterType="3c462397-7840-4890-ae78-d123d9fd138b" formVersion="0.5"
+<htmlform formUuid="f1ebd934-e291-430d-956c-cd7eea7af5c1" formName="Medication Order" formEncounterType="3c462397-7840-4890-ae78-d123d9fd138b" formVersion="0.5.1"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="10"
 	formIcon="icon-stethoscope"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.medication-order"
 	formDisplayStyle="Simple"
 	>
 
