--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.5.1"
+<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.5.2"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="5"
 	formIcon="icon-stethoscope"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.doctor-physical-exam"
 	formDisplayStyle="Simple"
 	>
 
