--- a/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
+++ b/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.6.4"
+<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.6.5"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="2"
 formIcon="icon-medkit"
 formShowIf=""
+formPrivilege="Task: lfhcforms.vitals"
 formDisplayStyle="Simple"
 >
 
