--- a/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
@@ -1,10 +1,11 @@
 <htmlform
-	formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.5.2"
+	formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.5.3"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="12"
 	formIcon="icon-group"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.clinical-notes"
 	formDisplayStyle="Simple"
 	>
 
