--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.5.1"
+<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.5.2"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="20"
 	formIcon="icon-group"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.discharge"
 	formDisplayStyle="Simple"
 	>
 
