--- a/omod/src/main/webapp/resources/htmlforms/immunity.html
+++ b/omod/src/main/webapp/resources/htmlforms/immunity.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="b44b99a5-2048-4d45-bf75-40e2eba29c8c" formName="Immunity and Infection" formEncounterType="e864f775-d1d0-4936-85df-557ad5c44ae1" formVersion="0.5.1"
+<htmlform formUuid="b44b99a5-2048-4d45-bf75-40e2eba29c8c" formName="Immunity and Infection" formEncounterType="e864f775-d1d0-4936-85df-557ad5c44ae1" formVersion="0.5.2"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="6"
 	formIcon="icon-stethoscope"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.immunity-and-infection"
 	formDisplayStyle="Simple"
 >
 
