--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5.6"
+<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5.7"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="16"
 formIcon="icon-medkit"
 formShowIf=""
+formPrivilege="Task: lfhcforms.lines-and-tubes"
 formDisplayStyle="Simple"
 >
 
