--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,9 +1,10 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.2"
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.3"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="7"
 	formIcon="icon-stethoscope"
 	formShowIf=""
+	formPrivilege="Task: lfhcforms.treatment-plan-order"
 	formDisplayStyle="Simple"
 	>
 
