Changing label of privileges to match new future naming ex: lfhcforms.vitals -> refapp.lfhc.forms.vitals 	modified:   ../../../resources/config.xml 	modified:   clinicalnotes.html 	modified:   diagnosis.html 	modified:   diagnostic-imaging.html 	modified:   discharge.html 	modified:   dispense-med.html 	modified:   fluidbalance.html 	modified:   history.html 	modified:   immunity.html 	modified:   ipd-nurse.html 	modified:   lines-tubes.html 	modified:   med-order.html 	modified:   nvobs.html 	modified:   opd-nurse.html 	modified:   phys-exam.html 	modified:   treatment.html 	modified:   triage.html 	modified:   vitals-pews.html 	modified:   wound.html

--- a/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
@@ -5,7 +5,7 @@
 	formOrder="12"
 	formIcon="icon-group"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.clinical-notes"
+	formPrivilege="Task: refapp.lfhc.forms.clinical-notes"
 	formDisplayStyle="Simple"
 	>
 
