--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -4,7 +4,7 @@ formUILocation="patientDashboard.visitActions"
 formOrder="11"
 formIcon="icon-stethoscope"
 formShowIf=""
-formPrivilege="Task: lfhcforms.diagnosis"
+formPrivilege="Task: refapp.lfhc.forms.diagnosis"
 formDisplayStyle="Simple"
 >
 
