--- a/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
@@ -4,7 +4,7 @@
 	formOrder="9"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.xray-ultrasound-order"
+	formPrivilege="Task: refapp.lfhc.forms.xray-ultrasound-order"
 	formDisplayStyle="Simple"
 	>
 
