--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -4,7 +4,7 @@
 	formOrder="20"
 	formIcon="icon-group"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.discharge"
+	formPrivilege="Task: refapp.lfhc.forms.discharge"
 	formDisplayStyle="Simple"
 	>
 
