--- a/omod/src/main/webapp/resources/htmlforms/dispense-med.html
+++ b/omod/src/main/webapp/resources/htmlforms/dispense-med.html
@@ -4,7 +4,7 @@
 	formOrder="19"
 	formIcon="icon-plus-sign-alt"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.dispense-medication"
+	formPrivilege="Task: refapp.lfhc.forms.dispense-medication"
 	formDisplayStyle="Standard"
 	>
 
