--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -4,7 +4,7 @@
 	formOrder="14"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.fluid-balance"
+	formPrivilege="Task: refapp.lfhc.forms.fluid-balance"
 	formDisplayStyle="Simple"
 	>
 
