--- a/omod/src/main/webapp/resources/htmlforms/history.html
+++ b/omod/src/main/webapp/resources/htmlforms/history.html
@@ -5,7 +5,7 @@
 	formOrder="4"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.doctor-history"
+	formPrivilege="Task: refapp.lfhc.forms.doctor-history"
 	formDisplayStyle="Simple"
 	>
  
