--- a/omod/src/main/webapp/resources/htmlforms/immunity.html
+++ b/omod/src/main/webapp/resources/htmlforms/immunity.html
@@ -4,7 +4,7 @@
 	formOrder="6"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.immunity-and-infection"
+	formPrivilege="Task: refapp.lfhc.forms.immunity-and-infection"
 	formDisplayStyle="Simple"
 >
 
