--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -4,7 +4,7 @@ formUILocation="patientDashboard.visitActions"
 formOrder="16"
 formIcon="icon-medkit"
 formShowIf=""
-formPrivilege="Task: lfhcforms.lines-and-tubes"
+formPrivilege="Task: refapp.lfhc.forms.lines-and-tubes"
 formDisplayStyle="Simple"
 >
 
