--- a/omod/src/main/webapp/resources/htmlforms/med-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/med-order.html
@@ -4,7 +4,7 @@
 	formOrder="10"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.medication-order"
+	formPrivilege="Task: refapp.lfhc.forms.medication-order"
 	formDisplayStyle="Simple"
 	>
 
