--- a/omod/src/main/webapp/resources/htmlforms/nvobs.html
+++ b/omod/src/main/webapp/resources/htmlforms/nvobs.html
@@ -4,7 +4,7 @@ formAddMetadata="yes"
 	formOrder="17"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.neurovascular-obs"
+	formPrivilege="Task: refapp.lfhc.forms.neurovascular-obs"
 	formDisplayStyle="Simple"
 >
 
