--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -4,7 +4,7 @@
 	formOrder="3"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.opd-nurse"
+	formPrivilege="Task: refapp.lfhc.forms.opd-nurse"
 	formDisplayStyle="Simple"
 	>
 
