--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -4,7 +4,7 @@
 	formOrder="5"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.doctor-physical-exam"
+	formPrivilege="Task: refapp.lfhc.forms.doctor-physical-exam"
 	formDisplayStyle="Simple"
 	>
 
