--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -4,7 +4,7 @@
 	formOrder="7"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.treatment-plan-order"
+	formPrivilege="Task: refapp.lfhc.forms.treatment-plan-order"
 	formDisplayStyle="Simple"
 	>
 
