--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -4,7 +4,7 @@
 	formOrder="1"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.triage"
+	formPrivilege="Task: refapp.lfhc.forms.triage"
 	formDisplayStyle="Standard"
 	>
 
