--- a/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
+++ b/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
@@ -4,7 +4,7 @@ formUILocation="patientDashboard.visitActions"
 formOrder="2"
 formIcon="icon-medkit"
 formShowIf=""
-formPrivilege="Task: lfhcforms.vitals"
+formPrivilege="Task: refapp.lfhc.forms.vitals"
 formDisplayStyle="Simple"
 >
 
