--- a/omod/src/main/webapp/resources/htmlforms/wound.html
+++ b/omod/src/main/webapp/resources/htmlforms/wound.html
@@ -4,7 +4,7 @@
 	formOrder="18"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.wound-details"
+	formPrivilege="Task: refapp.lfhc.forms.wound-details"
 	formDisplayStyle="Simple"
 	>
 
