--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -4,7 +4,7 @@
 	formOrder="13"
 	formIcon="icon-medkit"
 	formShowIf=""
-	formPrivilege="Task: lfhcforms.ipd-nurse"
+	formPrivilege="Task: refapp.lfhc.forms.ipd-nurse"
 	formDisplayStyle="Simple"
 	>
 
