--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.4"
+	<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.4"
 
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
@@ -11,60 +11,54 @@
 	<ifMode mode="VIEW">
 		<script type="text/javascript" id="handleViewMode">
 
-			// JavaScript for VIEW mode
-			jQuery(document).ready(function(){
-				handleViewMode("348c2a9e-17c8-4c15-8cef-e8f332a69853");
+		// JavaScript for VIEW mode
+		jQuery(document).ready(function(){
+			handleViewMode("348c2a9e-17c8-4c15-8cef-e8f332a69853");
 
-				$("htmlform").each(function (index, currentForm) {
-					if ($(currentForm).attr("formuuid") == "348c2a9e-17c8-4c15-8cef-e8f332a69853") {
-						$("#when-div").addClass("hidden");
-					}	
-				});
-
+			$("htmlform").each(function (index, currentForm) {
+				if ($(currentForm).attr("formuuid") == "348c2a9e-17c8-4c15-8cef-e8f332a69853") {
+					$("#when-div").addClass("hidden");
+				}
 			});
+
+		});
 		</script>
 
 	</ifMode>
 
-
 	<ifMode mode="enter">
-		<uiInclude provider="lfhcforms" javascript="editEncounterDate.js"/>
-		<script type="text/javascript" id="handleViewMode">
 
-			var displayToast = true
+		<script type="text/javascript">
 
-			function visitDate(visitStartDate, visitEndDate, message) {
+		var displayToast = true
 
-				var visitStartDate = new Date(visitStartDate);
-				var visitEndDate = new Date(visitEndDate);
-				var currentDate = new Date();
+		function handleDisplayVisitDate(visitStartDate, visitEndDate) {
 
-				if (!(visitEndDate.getTime())) {
-					console.log("no visit end date");
-				} else {
-					console.log("is past visit");
-					if (displayToast) {
-						$().toastmessage( 'showToast', { type: 'alert',
-	                                              position: 'top-right',
-	                                              text:  message } );
-						displayToast = false;
-					};
-					$("#startDate").text(("0" + visitStartDate.getDate()).slice(-2) + "/" + ("0" + (visitStartDate.getMonth() + 1)).slice(-2) + "/" + visitStartDate.getFullYear() + "   " + visitStartDate.getHours() + ":" + visitStartDate.getMinutes());
-					$("#endDate").text(("0" + visitEndDate.getDate()).slice(-2) + "/" + ("0" + (visitEndDate.getMonth() + 1)).slice(-2) + "/" + visitEndDate.getFullYear() + "   " + visitEndDate.getHours() + ":" + visitEndDate.getMinutes());
+			var visitStartDate = new Date(visitStartDate);
+			var visitEndDate = new Date(visitEndDate);
+			var currentDate = new Date();
+			//console.log(visitStartDate);
+			//console.log(visitEndDate);
+			if (displayToast) {
+				$().toastmessage( 'showToast', { type: 'alert',
+				position: 'top-right',
+				text:  alertMessage } );
+				displayToast = false;
+			};
 
-					setHoursMinutesWidget(visitStartDate,visitEndDate);
-
-					$(".hfe-seconds").hide()
-					$(".hfe-hours").css("display", "inline-block");
-					$(".hfe-minutes").css("display", "inline-block");
-					$(".editEncounterDate").show();
-					showEditEncounterDateDialog();
-
-				}
+			// Set the encounterDate to be 'visit end date' instead of 'visit start date'
+			if (htmlForm) {
+				htmlForm.setEncounterDate(visitEndDate);
+				$().toastmessage( 'showToast', { type: 'alert',
+				position: 'top-right',
+				text:  successMessage } );
 			}
 
-		function setHoursMinutesWidget (visitStartDate, visitEndDate) {
+			// Set the encounter time to be 'visit end time' instead of 00:00
+			setVisitEndTime(visitEndDate);
+		}
 
+		function setVisitEndTime (visitEndDate) {
 			$(".hfe-hours").val(visitEndDate.getHours());
 			$(".hfe-minutes").val(visitEndDate.getMinutes());
 			$(".hfe-seconds").val(0);
@@ -73,69 +67,32 @@
 		</script>
 
 		<lookup complexExpression="
-		#set($message = $fn.message('lfhcforms.pastencounter.alert'))
+		#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
 		#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
 
-&lt;script type=&quot;text/javascript&quot;>
-			var successMessage = '${successMessage}';
+		&lt;script type=&quot;text/javascript&quot;>
+		var alertMessage = '${alertMessage}';
+		var successMessage = '${successMessage}';
 
-			jQuery(document).ready(function(){
-			visitDate('${visit.startDatetime}', '${visit.stopDatetime}', '${message}');
+		jQuery(document).ready(function(){
+			handleDisplayVisitDate('${visit.startDatetime}', '${visit.stopDatetime}');
 			$('.editDate').bind('click', function () {
-			visitDate('${visit.startDatetime}', '${visit.stopDatetime}', '${message}');
+				handleDisplayVisitDate('${visit.startDatetime}', '${visit.stopDatetime}');
+			});
 		});
-	});
-	&lt;/script>" />
+		&lt;/script>" />
 
-	<style type="text/css">
-		
+		<style type="text/css">
+
 		.dialog select, .ngdialog.ngdialog-theme-default .ngdialog-content select {
 			width:35%;
 
 		}
 
-	</style>
+		</style>
 	</ifMode>
 
-	<div id="encounter-date-dialog" class="dialog" style="display:none;">
-		<div class="dialog-header">
-			<h3><uimessage code="lfhcforms.pastencounter.editencounterdate" /></h3>
-		</div>
-		<div class="dialog-content">
-			<p style="margin-bottom:10px;">
-				<em><uimessage code="lfhcforms.pastencounter.enterencounterdate" /></em>
-			</p>
-			<ul>
-				<li class="info">
-					<span>
-						<uimessage code="lfhcforms.pastencounter.visitstartdate" />
-					</span>
-					<h6 id="startDate">
-					</h6>
-				</li>
-				<li class="info">
-					<span>
-						<uimessage code="lfhcforms.pastencounter.visitenddate" />
-					</span>
-					<h6 id="endDate">
-					</h6>
-				</li>
-				<li class="info">
-					<span>
-						<uimessage code="lfhcforms.pastencounter.encounterdate" />
-					</span>
-					<span>
-						<encounterDate id="encounterDate" default="now" showTime="true"/>
-					</span>
-				</li>
-			</ul>
-
-			<button class="confirm">OK</button>
-
-		</div>
-	</div>
-
-	<div class="hidden" id="who-where">
+	<div class="hidden" id="who-where-when">
 
 		<p id="who">
 			<label>
@@ -154,11 +111,18 @@
 				<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 			</span>
 		</p>
+
+		<p id="when">
+			<span>
+				<uimessage code="lfhcforms.pastencounter.encounterdate" />
+			</span>
+			<span>
+				<encounterDate id="encounterDate" default="now" showTime="true"/>
+			</span>
+		</p>
 	</div>
 
-	<div class="editEncounterDate hidden">
-		<a class="editDate"><uimessage code="lfhcforms.pastencounter.editencounterdate" /></a>
-	</div>
+
 
 	<section id="admission-checklist" sectionTag="section" headerStyle="title" headerCode="Nursing Admission Checklist">
 		<fieldset field-separator=", ">
@@ -217,5 +181,5 @@
 	</section>
 
 
-<submit/>
-</htmlform>
+	<submit/>
+	</htmlform>
