--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -4,7 +4,7 @@ formUILocation="patientDashboard.visitActions"
 formOrder="8"
 formIcon="icon-stethoscope"
 formShowIf=""
-formDisplayStyle="Standard"
+formDisplayStyle="Simple"
 >
 
 
